practice section added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>legal solution</title>
 
+	<!-- font awesome cdn -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- google font -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +25,10 @@
 				extend: {
 					colors: {
 						clifford: '#da373d',
-						"color-primary": '#B68C5A'
+						"color-primary": '#B68C5A',
+						"secondary-color": '#414040'
 					},
-					backgroundImage:{
+					backgroundImage: {
 						'hero-bg': "url('./images/banner.png')"
 					}
 				}
@@ -83,16 +88,113 @@
 			<div class="hero-content text-center text-neutral-content">
 				<div class="max-w-md">
 					<h1 class="mb-5 text-5xl font-bold">We Provide Effective
-						 Legal Solutions</h1>
-					<p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-						<input type="text" placeholder="Search your services" class="input input-bordered w-full max-w-xs" />
+						Legal Solutions</h1>
+					<p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority
+						have suffered alteration in some form, by injected humour.</p>
+					<input type="text" placeholder="Search your services"
+						class="input input-bordered w-full max-w-xs" />
 					<button class="btn bg-color-primary text-white border-0">Search</button>
 				</div>
 			</div>
 		</div>
 	</header>
 	<main>
+		<!-- legal practice section -->
+		<section class="text-center container mx-auto border-2 border-red-900">
+			<h3 class="text-4xl font-extrabold text-secondary-color">The Legal Practice Area</h3>
+			<p class="text-base font-normal mb-10 w-[714px] mx-auto">There are many variations of passages of Lorem
+				Ipsum available, but
+				the majority have suffered alteration in some form, by injected humour.</p>
 
+			<!-- card container -->
+			<div class="grid grid-cols-3">
+				<!-- card1 -->
+				<div class="card  bg-base-100 shadow-xl">
+					<figure class="px-10 pt-10">
+						<img src="./images/business.png" alt="Shoes" class="rounded-xl" />
+					</figure>
+					<div class="card-body items-center text-center">
+						<h2 class="card-title font-3xl font-extrabold text-[#414040]">Business Law</h2>
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have
+							suffered alteration in some form, by injected humour.</p>
+						<div class="card-actions">
+							<button class="btn bg-color-primary text-white"><i class="fas fa-arrow-right"></i></button>
+						</div>
+					</div>
+				</div>
+				<!-- card2 -->
+				<div class="card  bg-base-100 shadow-xl">
+					<figure class="px-10 pt-10">
+						<img src="./images/criminal.png" alt="Shoes" class="rounded-xl" />
+					</figure>
+					<div class="card-body items-center text-center">
+						<h2 class="card-title font-3xl font-extrabold text-[#414040]">Business Law</h2>
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have
+							suffered alteration in some form, by injected humour.</p>
+						<div class="card-actions">
+							<button class="btn bg-color-primary text-white"><i class="fas fa-arrow-right"></i></button>
+						</div>
+					</div>
+				</div>
+				<!-- card3 -->
+				<div class="card  bg-base-100 shadow-xl">
+					<figure class="px-10 pt-10">
+						<img src="./images/child.png" alt="Shoes" class="rounded-xl" />
+					</figure>
+					<div class="card-body items-center text-center">
+						<h2 class="card-title font-3xl font-extrabold text-[#414040]">Business Law</h2>
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have
+							suffered alteration in some form, by injected humour.</p>
+						<div class="card-actions">
+							<button class="btn bg-color-primary text-white"><i class="fas fa-arrow-right"></i></button>
+						</div>
+					</div>
+				</div>
+				<!-- card4 -->
+				<div class="card  bg-base-100 shadow-xl">
+					<figure class="px-10 pt-10">
+						<img src="./images/education.png" alt="Shoes" class="rounded-xl" />
+					</figure>
+					<div class="card-body items-center text-center">
+						<h2 class="card-title font-3xl font-extrabold text-[#414040]">Business Law</h2>
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have
+							suffered alteration in some form, by injected humour.</p>
+						<div class="card-actions">
+							<button class="btn bg-color-primary text-white"><i class="fas fa-arrow-right"></i></button>
+						</div>
+					</div>
+				</div>
+				<!-- card5 -->
+				<div class="card  bg-base-100 shadow-xl">
+					<figure class="px-10 pt-10">
+						<img src="./images/divorce.png" alt="Shoes" class="rounded-xl" />
+					</figure>
+					<div class="card-body items-center text-center">
+						<h2 class="card-title font-3xl font-extrabold text-[#414040]">Business Law</h2>
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have
+							suffered alteration in some form, by injected humour.</p>
+						<div class="card-actions">
+							<button class="btn bg-color-primary text-white"><i class="fas fa-arrow-right"></i></button>
+						</div>
+					</div>
+				</div>
+				<!-- card6 -->
+				<div class="card  bg-base-100 shadow-xl">
+					<figure class="px-10 pt-10">
+						<img src="./images/tax.png" alt="Shoes" class="rounded-xl" />
+					</figure>
+					<div class="card-body items-center text-center">
+						<h2 class="card-title font-3xl font-extrabold text-[#414040]">Business Law</h2>
+						<p>There are many variations of passages of Lorem Ipsum available, but the majority have
+							suffered alteration in some form, by injected humour.</p>
+						<div class="card-actions">
+							<button class="btn bg-color-primary text-white"><i class="fas fa-arrow-right"></i></button>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</section>
 	</main>
 </body>
 
