--- a/index.html
+++ b/index.html
@@ -195,7 +195,189 @@
 			</div>
 
 		</section>
+		<!-- review section -->
+		<section class="container mx-auto border-2 border-red-900 text-center">
+			<h3 class="text-4xl font-extrabold text-secondary-color">The Legal Practice Area</h3>
+			<p class="text-base font-normal mb-10 w-[714px] mx-auto">There are many variations of passages of Lorem
+				Ipsum available, but
+				the majority have suffered alteration in some form, by injected humour.</p>
+
+			<!-- sliders -->
+			<div class="carousel w-full">
+				<!-- slider 1 -->
+				<div id="slide1" class="carousel-item relative w-full">
+					<div>
+						hi
+					</div>
+					<img src="./images/banner.png" class="w-full" />
+					<div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+						<a href="#slide4" class="btn btn-circle">❮</a>
+						<a href="#slide2" class="btn btn-circle">❯</a>
+					</div>
+				</div>
+				<div id="slide2" class="carousel-item relative w-full">
+					<img src="./images/slider-1.jpg" class="w-full" />
+					<div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+						<a href="#slide1" class="btn btn-circle">❮</a>
+						<a href="#slide3" class="btn btn-circle">❯</a>
+					</div>
+				</div>
+				<div id="slide3" class="carousel-item relative w-full">
+					<img src="./images/slider-2.jpg" class="w-full" />
+					<div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+						<a href="#slide2" class="btn btn-circle">❮</a>
+						<a href="#slide4" class="btn btn-circle">❯</a>
+					</div>
+				</div>
+				<div id="slide4" class="carousel-item relative w-full">
+					<img src="./images/slider-3.jpg" class="w-full" />
+					<div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+						<a href="#slide3" class="btn btn-circle">❮</a>
+						<a href="#slide1" class="btn btn-circle">❯</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- FAQ section -->
+		<section class="container mx-auto border-2 border-red-900 text-center">
+			<h3 class="text-4xl font-extrabold text-secondary-color">Frequently Asked Any Questions</h3>
+			<p class="text-base font-normal mb-10 w-[714px] mx-auto">There are many variations of passages of Lorem
+				Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+			<div class="flex items-cente">
+				<div class="flex-1 space-y-6">
+					<div class="collapse collapse-plus bg-base-200">
+						<input type="radio" name="my-accordion-3" checked="checked" />
+						<div class="collapse-title text-xl font-medium">
+							Click to open this one and close others
+						</div>
+						<div class="collapse-content">
+							<p>hello</p>
+						</div>
+					</div>
+					<div class="collapse collapse-plus bg-base-200">
+						<input type="radio" name="my-accordion-3" checked="checked" />
+						<div class="collapse-title text-xl font-medium">
+							Click to open this one and close others
+						</div>
+						<div class="collapse-content">
+							<p>hello</p>
+						</div>
+					</div>
+					<div class="collapse collapse-plus bg-base-200">
+						<input type="radio" name="my-accordion-3" />
+						<div class="collapse-title text-xl font-medium">
+							Click to open this one and close others
+						</div>
+						<div class="collapse-content">
+							<p>hello</p>
+						</div>
+					</div>
+					<div class="collapse collapse-plus bg-base-200">
+						<input type="radio" name="my-accordion-3" />
+						<div class="collapse-title text-xl font-medium">
+							Click to open this one and close others
+						</div>
+						<div class="collapse-content">
+							<p>hello</p>
+						</div>
+					</div>
+				</div>
+				<div class="flex-1">
+					<img src="./images/faq.png" alt="" class="w-3/4">
+				</div>
+			</div>
+		</section>
+		<!-- contact section -->
+		<section class="container mx-auto border-2 border-red-900 text-center">
+			<h3 class="text-4xl font-extrabold text-secondary-color">Frequently Asked Any Questions</h3>
+			<p class="text-base font-normal mb-10 w-[714px] mx-auto">There are many variations of passages of Lorem
+				Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+			<div class="flex">
+				<div class="grid grid-cols-2">
+
+					<div class="card bg-base-100 shadow-xl">
+						<figure class="px-10 pt-10">
+							<img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title">Address</h2>
+							<p>If a dog chews shoes whose shoes does he choose?</p>
+						</div>
+					</div>
+					<div class="card bg-base-100 shadow-xl">
+						<figure class="px-10 pt-10">
+							<img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title">Address</h2>
+							<p>If a dog chews shoes whose shoes does he choose?</p>
+						</div>
+					</div>
+					<div class="card bg-base-100 shadow-xl">
+						<figure class="px-10 pt-10">
+							<img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title">Address</h2>
+							<p>If a dog chews shoes whose shoes does he choose?</p>
+						</div>
+					</div>
+					<div class="card bg-base-100 shadow-xl">
+						<figure class="px-10 pt-10">
+							<img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title">Address</h2>
+							<p>If a dog chews shoes whose shoes does he choose?</p>
+						</div>
+					</div>
+				</div>
+				<div class="flex-1 space-y-7">
+					<input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+					<input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+					<input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
+					<textarea placeholder="Bio"
+						class="textarea textarea-bordered textarea-lg w-full max-w-xs"></textarea>
+					<button class="btn bg-color-primary text-white w-3/4">Send Message</button>
+				</div>
+			</div>
+		</section>
 	</main>
+	<footer class="footer p-10 bg-black text-base-content text-white">
+		<div>
+			<span class="footer-title"><img src="./images/logo.png" alt=""></span>
+			<a class="link link-hover">Branding</a>
+			<a class="link link-hover">Design</a>
+			<a class="link link-hover">Marketing</a>
+			<a class="link link-hover">Advertisement</a>
+		</div>
+		<div>
+			<span class="footer-title">Company</span>
+			<a class="link link-hover">About us</a>
+			<a class="link link-hover">Contact</a>
+			<a class="link link-hover">Jobs</a>
+			<a class="link link-hover">Press kit</a>
+		</div>
+		<div>
+			<span class="footer-title">Legal</span>
+			<a class="link link-hover">Terms of use</a>
+			<a class="link link-hover">Privacy policy</a>
+			<a class="link link-hover">Cookie policy</a>
+		</div>
+		<div>
+			<span class="footer-title">Newsletter</span>
+			<div class="form-control w-80">
+				<label class="label">
+					<span class="label-text">Enter your email address</span>
+				</label>
+				<div class="relative">
+					<input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" />
+					<button class="btn bg-color-primary absolute top-0 right-0 rounded-l-none text-white"><i class="fa-solid fa-paper-plane"></i></button>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
